--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "electron": "^30.5.1",
     "electron-builder": "^24.9.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
