--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest",
     "package": "npm run build && electron-builder",
     "package:mac": "npm run build && electron-builder --mac",
+    "preinstall": "npx only-allow npm",
     "postinstall": "electron-rebuild",
     "prepare": "husky"
   },
@@ -113,6 +114,5 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css}": "biome format --write"
-  },
-  "packageManager": "pnpm@10.22.0"
+  }
 }
