--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "package": "npm run build && electron-builder",
     "package:mac": "npm run build && electron-builder --mac",
     "preinstall": "npx only-allow npm",
-    "postinstall": "electron-rebuild",
+    "postinstall": "electron-builder install-app-deps",
     "prepare": "husky"
   },
   "keywords": [
@@ -41,7 +41,6 @@
   "devDependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
     "@biomejs/biome": "^2.3.6",
-    "@electron/rebuild": "^4.0.1",
     "@hugeicons/core-free-icons": "^2.0.0",
     "@hugeicons/react": "^1.1.1",
     "@tailwindcss/vite": "^4.1.17",
