fix: add author field to package.json
The author field is for one person (singular), per npm documentation.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "neovate",
     "desktop"
   ],
-  "authors": [
-    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
-  ],
+  "author": "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)",
   "homepage": "https://neovateai.dev",
   "repository": {
     "type": "git",
