--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "Neovate Code Desktop",
   "main": "dist/main/main/main.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:main\" \"npm run dev:renderer\"",
-    "dev:main": "tsc -p tsconfig.main.json && electron dist/main/main/main.js --dev",
-    "dev:renderer": "vite",
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "tsc -p tsconfig.main.json",
     "build:renderer": "vite build",
+    "dev": "concurrently \"npm run dev:main\" \"npm run dev:renderer\"",
+    "dev:main": "tsc -p tsconfig.main.json && electron dist/main/main/main.js --dev",
+    "dev:renderer": "vite",
     "format": "biome format .",
-    "test": "vitest",
     "package": "npm run build && electron-builder",
     "package:mac": "npm run build && electron-builder --mac",
-    "preinstall": "npx only-allow npm",
     "postinstall": "electron-builder install-app-deps",
-    "prepare": "husky"
+    "preinstall": "npx only-allow npm",
+    "prepare": "husky",
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "electron",
@@ -71,17 +72,19 @@
   },
   "dependencies": {
     "@pierre/diffs": "^1.0.2",
+    "@neovate/code": "^0.22.7",
     "electron-updater": "^6.6.2",
+    "portfinder": "^1.0.32",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "build": {
-    "appId": "com.neovatecodedesktop",
-    "productName": "neovate-code-desktop",
+    "appId": "com.neovateai.desktop",
+    "productName": "Neovate",
     "directories": {
       "output": "release"
     },
-    "artifactName": "neovate-code-desktop-${arch}.${ext}",
+    "artifactName": "neovate-${version}-${arch}.${ext}",
     "publish": [
       {
         "provider": "github",
@@ -92,19 +95,28 @@
     "files": [
       "dist/**/*"
     ],
+    "asarUnpack": [
+      "**/node_modules/@neovate/code/**/*"
+    ],
     "mac": {
+      "icon": "build/icons/icon.icns",
       "category": "public.app-category.developer-tools",
+      "hardenedRuntime": true,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist",
       "target": [
         {
           "target": "dmg",
           "arch": [
-            "arm64"
+            "arm64",
+            "x64"
           ]
         },
         {
           "target": "zip",
           "arch": [
-            "arm64"
+            "arm64",
+            "x64"
           ]
         }
       ]
