--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev:main": "tsc -p tsconfig.main.json && electron dist/main/main/main.js --dev",
     "dev:renderer": "vite",
     "format": "biome format .",
-    "package": "npm run build && electron-builder",
-    "package:mac": "npm run build && electron-builder --mac",
+    "package": "npm run build && electron-builder --mac --config configs/electron-builder.json",
+    "package:dev": "npm run build && electron-builder --mac --config configs/electron-builder.dev.json",
     "postinstall": "electron-builder install-app-deps",
     "preinstall": "npx only-allow npm",
     "prepare": "husky",
@@ -77,50 +77,6 @@
     "portfinder": "^1.0.32",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
-  },
-  "build": {
-    "appId": "com.neovateai.desktop",
-    "productName": "Neovate",
-    "directories": {
-      "output": "release"
-    },
-    "artifactName": "neovate-${version}-${arch}.${ext}",
-    "publish": [
-      {
-        "provider": "github",
-        "owner": "neovateai",
-        "repo": "neovate-code-desktop"
-      }
-    ],
-    "files": [
-      "dist/**/*"
-    ],
-    "asarUnpack": [
-      "**/node_modules/@neovate/code/**/*"
-    ],
-    "mac": {
-      "icon": "build/icons/icon.icns",
-      "category": "public.app-category.developer-tools",
-      "hardenedRuntime": true,
-      "entitlements": "build/entitlements.mac.plist",
-      "entitlementsInherit": "build/entitlements.mac.plist",
-      "target": [
-        {
-          "target": "dmg",
-          "arch": [
-            "arm64",
-            "x64"
-          ]
-        },
-        {
-          "target": "zip",
-          "arch": [
-            "arm64",
-            "x64"
-          ]
-        }
-      ]
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css}": "biome format --write"
