--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "dependencies": {
     "@pierre/diffs": "^1.0.2",
-    "@neovate/code": "latest",
+    "@neovate/code": "^0.22.10",
     "electron-updater": "^6.6.2",
     "portfinder": "^1.0.32",
     "react": "^19.2.0",
