--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
   },
   "dependencies": {
     "@pierre/diffs": "^1.0.2",
+    "@neovate/code": "^0.22.10",
     "electron-updater": "^6.6.2",
+    "portfinder": "^1.0.32",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -91,6 +93,9 @@
     ],
     "files": [
       "dist/**/*"
+    ],
+    "asarUnpack": [
+      "**/node_modules/@neovate/code/**/*"
     ],
     "mac": {
       "category": "public.app-category.developer-tools",
