--- a/package.json
+++ b/package.json
@@ -71,12 +71,13 @@
     "zustand": "^5.0.8"
   },
   "dependencies": {
-    "@pierre/diffs": "^1.0.2",
     "@neovate/code": "^0.22.10",
+    "@pierre/diffs": "^1.0.2",
     "electron-updater": "^6.6.2",
     "portfinder": "^1.0.32",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-resizable-panels": "^4.3.3"
   },
   "build": {
     "appId": "com.neovatecodedesktop",
